--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,12 @@
+{% load static %}
+
 <!DOCTYPE HTML>
 <html lang="ru">
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}" media="screen" />
+    <link rel="stylesheet" href="{% static 'css/form.css' %}" media="screen" />
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -10,21 +14,32 @@
 </head>
 <body>
     <div class="container">
-        <nav class="navbar navbar-light bg-light justify-content-between">
+        <nav class="navbar navbar-light">
             <a class="navbar-brand">Математическая карусель</a>
-            <form class="form-inline">
-                {% if user.is_authenticated %}
-                    <a href="{% url 'logout' %}" class="btn btn-light" role="button">Выход</a>
 
-                {% else %}
-                    <a href="{% url 'login' %}" class="btn btn-light" role="button">Вход</a>
-                    <a href="{% url 'register' %}" class="btn btn-primary" role="button">Регистрация</a>
-                {% endif %}
-            </form>
+            {% block navbar %}
+                <form class="form-inline mr-auto">
+                    <a href="{% url 'index' %}" class="frm-btn" role="button">Главная</a>
+                    <a href="{% url 'games' %}" class="frm-btn" role="button">Игры</a>
+                    <a href="{% url 'teams' %}" class="frm-btn" role="button">Мои команды</a>
+                    <a href="{% url 'profile' %}" class="frm-btn" role="button">Профиль</a>
+                </form>
+            {% endblock %}
+            {% block navbar-auth%}
+                <form class="form-inline">
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'logout' %}" class="frm-btn" role="button">Выход</a>
+                    {% else %}
+                        <a href="{% url 'login' %}" class="frm-btn" role="button">Вход</a>
+                        <a href="{% url 'register' %}" class="frm-btn primary" role="button">Регистрация</a>
+                    {% endif %}
+                </form>
+            {% endblock %}
         </nav>
-        {% block content %}
+        <div class="col-auto">
+            {% block content %}
 
-        {% endblock %}
+            {% endblock %}
         </div>
     </div>
 </body>
