--- a/templates/registration.html
+++ b/templates/registration.html
@@ -6,10 +6,21 @@
 
 {% load crispy_forms_tags %}
 
+{% block navbar-auth%}
+    <form class="form-inline">
+        {% if user.is_authenticated %}
+            <a href="{% url 'logout' %}" class="frm-btn" role="button">Выход</a>
+        {% else %}
+            <a href="{% url 'login' %}" class="frm-btn" role="button">Вход</a>
+            <a href="{% url 'register' %}" class="frm-btn active" role="button">Регистрация</a>
+        {% endif %}
+    </form>
+{% endblock %}
+
 {% block content %}
-    <form method="POST" class="form-group">
+    <form method="POST" class="frm">
         {% csrf_token %}
         {{ form|crispy }}
-        <button type="submit" class="btn btn-success">Регистрация</button>
+        <button type="submit" class="frm-btn">Регистрация</button>
     </form>
 {% endblock %}
