--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,11 +6,22 @@
 
 {% load crispy_forms_tags %}
 
+{% block navbar-auth%}
+    <form class="form-inline">
+        {% if user.is_authenticated %}
+            <a href="{% url 'logout' %}" class="frm-btn" role="button">Выход</a>
+        {% else %}
+            <a href="{% url 'login' %}" class="frm-btn active" role="button">Вход</a>
+            <a href="{% url 'register' %}" class="frm-btn primary" role="button">Регистрация</a>
+        {% endif %}
+    </form>
+{% endblock %}
+
 {% block content %}
-    <form method="POST" class="form-group">
+    <form method="POST" class="frm">
         {% csrf_token %}
         {{ form|crispy }}
         <p>Нет аккаунта? <a href="{% url 'register' %}">Создать новый</a></p>
-        <button type="submit" class="btn btn-success">Вход</button>
+        <button type="submit" class="frm-btn">Вход</button>
     </form>
 {% endblock %}
