--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Вход в аккаунт
+    <title>Вход в аккаунт</title>
 {% endblock %}
 
 {% load crispy_forms_tags %}
