--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+    <title>Профиль</title>
+{% endblock %}
+
 {% block navbar %}
     <form class="form-inline mr-auto">
         <a href="{% url 'index' %}" class="frm-btn" role="button">Главная</a>
