--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Создание аккаунта
+    <title>Регистрация аккаунта</title>
 {% endblock %}
 
 {% load crispy_forms_tags %}
