--- a/templates/index.html
+++ b/templates/index.html
@@ -14,4 +14,10 @@
 {% endblock %}
 
 {% block content %}
+    <div class="frm">
+        <div class="card-body text-center">
+            <h1 class="card-title">Добро пожаловать на сайт!</h1>
+            <p class="card-text">Здесь вы сможете сыграть в математические онлайн игры "Карусель"</p>
+        </div>
+    </div>
 {% endblock %}
