--- a/templates/teams.html
+++ b/templates/teams.html
@@ -14,4 +14,22 @@
 {% endblock %}
 
 {% block content %}
+    <div class="frm">
+        <div class="card-body">
+            <h1 class="card-title">Доступные команды</h1>
+            <table class="table">
+                <tr>
+                    <th>Команда</th>
+                </tr>
+                <tbody>
+                    {% for team in teams %}
+                        <tr>
+                            <td><strong>{{ team }}</strong></td>
+                            <td><a href="{% url 'selected_team' team.pk %}" class="frm-btn" role="button">Состав</a></td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 {% endblock %}
