--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,9 +16,14 @@
 {% endblock %}
 
 {% block content %}
-     <form method="POST" class="frm">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button type="submit" class="frm-btn">Сохранить изменения</button>
-    </form>
+    <div class="frm">
+        <div class="card-body">
+            <h1 class="card-title mr-auto">{{ user.username }}</h1>
+            <form method="POST">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <button type="submit" class="frm-btn">Сохранить изменения</button>
+            </form>
+        </div>
+    </div>
 {% endblock %}
