add part of CRUD for team

--- a/templates/game/games.html
+++ b/templates/game/games.html
@@ -19,10 +19,10 @@
             <h1 class="card-title">Предстоящие игры</h1>
             <table class="table">
                 <tr>
-                    <th>Игра</th>
-                    <th>Время начала</th>
-                    <th>Время окончания</th>
-                    <th>Регистрация</th>
+                    <th class="col-4">Игра</th>
+                    <th class="col-2">Время начала</th>
+                    <th class="col-2">Время окончания</th>
+                    <th class="col-2">Регистрация</th>
                 </tr>
                 <tbody>
                     {% for game in games %}
