--- a/templates/team/selected_team.html
+++ b/templates/team/selected_team.html
@@ -1,30 +1,24 @@
-{% extends 'base.html' %}
-
-{% block title %}
-    <title>Мои команды</title>
-{% endblock %}
-
-{% block navbar %}
-    <form class="form-inline mr-auto">
-        <a href="{% url 'index' %}" class="frm-btn" role="button">Главная</a>
-        <a href="{% url 'games' %}" class="frm-btn" role="button">Игры</a>
-        <a href="{% url 'teams' %}" class="frm-btn active" role="button">Мои команды</a>
-        <a href="{% url 'profile' %}" class="frm-btn" role="button">Профиль</a>
-    </form>
-{% endblock %}
+{% extends 'team/teams.html' %}
 
 {% block content %}
     <div class="frm">
         <div class="card-body">
-            <form class="form-inline">
-                <h1 class="card-title">{{ team.name }}</h1>
+            <div class="d-flex">
+                <h1 class="card-title mr-auto">{{ team.name }}</h1>
+                <form class="form-inline">
                 {% if cur_player == captain %}
                     <a href="{% url 'add_player' team.pk%}" class="frm-btn" role="button">Пригласить игрока</a>
+                    <a href="{% url 'del_team' team.pk%}" class="frm-btn" role="button">Удалить команду</a>
+                </form>
+                {% else %}
+                    <a href="{% url 'leave_team' team.pk%}" class="frm-btn" role="button">Покинуть команду</a>
                 {% endif %}
-            </form>
+            </div>
+
             <table class="table">
                 <tr>
                     <th>Состав</th>
+                     <th class="col-2"></th>
                 </tr>
                 <tbody>
                     {% for player in players %}
@@ -33,6 +27,9 @@
                                 <td><strong>{{ player }} (Вы)</strong></td>
                             {% else %}
                                 <td>{{ player }}</td>
+                                {% if cur_player == captain %}
+                                    <td><a href="{% url 'del_player' team.pk player.pk%}" class="frm-btn" role="button">Удалить</a></td>
+                                {% endif %}
                             {% endif %}
                         </tr>
                     {% endfor %}
