fq that remove teams

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
                 <form class="form-inline mr-auto">
                     <a href="{% url 'index' %}" class="frm-btn" role="button">Главная</a>
                     <a href="{% url 'games' %}" class="frm-btn" role="button">Игры</a>
-                    <a href="{% url 'teams' %}" class="frm-btn" role="button">Мои команды</a>
+                    <!-- <a href="{#% url 'teams' %#}" class="frm-btn" role="button">Мои команды</a> -->
                     <a href="{% url 'profile' %}" class="frm-btn" role="button">Профиль</a>
                 </form>
             {% endblock %}
