--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,9 @@
                     <a href="{% url 'index' %}" class="frm-btn" role="button">Главная</a>
                     <a href="{% url 'games' %}" class="frm-btn" role="button">Игры</a>
                     <!-- <a href="{#% url 'teams' %#}" class="frm-btn" role="button">Мои команды</a> -->
-                    <a href="{% url 'profile' %}" class="frm-btn" role="button">Профиль</a>
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'profile' %}" class="frm-btn" role="button">Профиль</a>
+                    {% endif %}
                 </form>
             {% endblock %}
             {% block navbar-auth%}
