--- a/game/static/css/form.css
+++ b/game/static/css/form.css
@@ -4,23 +4,11 @@
   border: 2px solid black;
   box-shadow: 15px 15px 1px #ffa580, 15px 15px 1px 2px black; }
 
-button.frm-btn {
-  display: block;
-  margin: 0 auto;
-  line-height: 28pt;
-  padding: 0 20px;
-  background: #ffa580;
-  letter-spacing: 2px;
-  transition: .2s all ease-in-out;
-  outline: none;
-  border: 1px solid black;
-  box-shadow: 3px 3px 1px #95a4ff, 3px 3px 1px 1px black; }
-
 button.frm-btn:hover {
   background: #ffc9b2;
   border: 1px solid black; }
 
-a.frm-btn {
+a.frm-btn, button.frm-btn, input.frm-btn {
   display: block;
   margin: 0 auto;
   line-height: 28pt;
@@ -34,14 +22,14 @@ a.frm-btn {
   border: 1px solid black;
   box-shadow: 3px 3px 1px #95a4ff, 3px 3px 1px 1px black; }
 
-a.frm-btn.active {
+a.frm-btn.active, input.frm-btn.active {
   background: #ffa580;
 }
 
-a.frm-btn.primary {
+a.frm-btn.primary, input.frm-btn.primary {
   background: #80daff
 }
 
-a.frm-btn:hover {
+a.frm-btn:hover, input.frm-btn:hover {
   background: #ffa580;
   border: 1px solid black; }
