--- a/game/static/css/base.css
+++ b/game/static/css/base.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Fjalla+One&display=swap");
 
 body {
-  background: url("../images/background.jpg") center no-repeat;
+  background: url("../images/background.jpg") center;
   background-size: cover;
   width: 100vw;
   height: 100vh; }
