add tech. supp mail

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,5 +11,9 @@
             <h1 class="card-title">Добро пожаловать на сайт!</h1>
             <p class="card-text">Здесь вы сможете сыграть в математические онлайн игры "Карусель"</p>
         </div>
+        <div class="card-footer">
+            <span>Техническая поддержка:</span>
+            <a href="mailto:askurlin@edu.hse.ru"> askurlin@edu.hse.ru</a>
+        </div>
     </div>
 {% endblock %}
